# a2a-knowledge-mesh

./: .coverage  .env.example  .gitignore  A2A_Knowledge_Mesh_Deck.pptx  AGENTS.md  ARCHITECTURE.md  DEMO.md  DESIGN.md  MIGRATION.md  README.md  ROADMAP.md  audit_results.md  developer_prompt.md  main.py  mesh.py  pyproject.toml  test_integration.py  test_unit.py
agents/: auth.py  band_agent.py  base.py  bridge_agent.py  ingester.py  keeper.py  keeper_band.py  llm_extractor.py  mesh_agent.py  provider.py  reconciler.py  reconciler_band.py  registry.py  registry_band.py  runner.py  scraper_band.py  scraper_service.py  validation.py
dashboard/: analytics.html  architecture.html  index.html  server.py
docs/: agents.md  cover-image-prompt.md  slides.md  soumission.md  submission.md  video-script.md  video_script.md
fixtures/: clean_run.json  code_vs_doc.json  merge_conflict.json  stale_data.json
lib/: a2a_server.py  band_client.py  conflict.py
protocols/: a2a.py  json_parser.py
scripts/: gen_pptx.py  git_scraper.py  quick_demo.py  reset_db.py  run_mesh.sh  run_offline_demo.py  scraper.py  test_provider.py  test_scraper.py
spikes/: test_mention_strip.py
spikes/001-band-sdk/: agent_config.yaml  main.py  pyproject.toml  verify.py
spikes/002-a2a-agent-card/: README.md  main.py  pyproject.toml  server.py
spikes/003-a2a-discovery/: agent_server.py  test_discovery.py
spikes/004-conflict-detection/: README.md  test_conflict.py
spikes/005-band-resolution/: README.md  agent_config.yaml  main.py  pyproject.toml  test_resolution.py
(+2 files in other folders)
