[project]
name = "a2a-knowledge-mesh"
version = "0.1.0"
description = "3 A2A agents that discover, store, and reconcile knowledge via Band"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "uvicorn>=0.34",
    "starlette>=0.46",
    "band-sdk>=1.0.0",
    "httpx>=0.28",
    "pydantic>=2.0,<3",
    "pyjwt>=2.0",
]

[project.scripts]
mesh = "agents.runner:main"

[tool.ruff]
line-length = 100
target-version = "py311"
