[project]
name = "knowledge-mesh"
version = "0.2.0"
description = "Band-native multi-agent knowledge mesh — persistent fact store with AI conflict resolution"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "band-sdk>=1.0.0",
    "dirtyjson>=1.0.8",
    "httpx>=0.28",
    "pydantic>=2.0,<3",
    "python-dotenv>=1.0",
    "starlette>=0.46,<1",
    "uvicorn>=0.34",
]

[project.scripts]
mesh-runner = "agents.runner:main"

[tool.ruff]
line-length = 100
target-version = "py311"
